fix: z-index 2

--- a/src/pages/BenefitsBar/BenefitsBar.module.scss
+++ b/src/pages/BenefitsBar/BenefitsBar.module.scss
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  z-index: 10;
 }
 
 .numbers {
